API Changes Done. Create new api for update user profile

--- a/SOAP_LiveReporting/Web.config
+++ b/SOAP_LiveReporting/Web.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="ConnectionString" value="Data source=51.255.68.116,1440;Database=admin_livereporting;Uid=Live@#DOmain;Password=live@@123;"/>
+    <!--<add key="ConnectionString" value="Data source=51.255.68.116,1440;Database=admin_livereporting;Uid=Live@#DOmain;Password=live@@123;"/>-->
+    <add key="ConnectionString" value="Data source=149.56.23.109;Database=admin_livereporting;Uid=Live@#DOmain;Password=live@@123;"/>
   </appSettings>
   <connectionStrings/>
   <system.web>
